--- a/ecommerce/client/src/app/app.component.html
+++ b/ecommerce/client/src/app/app.component.html
@@ -7,7 +7,8 @@
   </div>
 
   <div class="title-b">
-    <button type="button" (click)="checkout()">Checkout</button>
+    <!-- Task 2.4 -->
+    <button type="button" (click)="checkout()" [disabled]="itemCount === 0">Checkout</button>
   </div>
 
   <div class="title-c">
