--- a/ecommerce/client/src/app/components/confirm-checkout.component.html
+++ b/ecommerce/client/src/app/components/confirm-checkout.component.html
@@ -1,6 +1,6 @@
 <h2>Checkout</h2>
 
-<form [formGroup]="form">
+<form [formGroup]="form" (submit)="checkout()">
   <table>
     <tr>
       <td>Name: </td>
@@ -23,7 +23,7 @@
     <tr>
       <td>Comments: </td>
       <td>
-        <textarea cols="30" rows="4"></textarea>
+        <textarea cols="30" rows="4" formControlName="comments"></textarea>
       </td>
     </tr>
     <tr>
